@@ -4,8 +4,10 @@ Changelog
 2.1.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
-
+- archetypes.schemaextender assumes presence of getRaw method which 
+  ComputedField does not provide
+  https://dev.plone.org/ticket/11315
+  [anthonygerrard]
 
 2.1.3 (2014-02-26)
 ------------------
